tests/e2e/semantics/obj_index_float.error
Error: syntax error in story at line 2, column 5

2|    b = a[1.5]
          ^^^^^

E0104: `Map[int,int]` can't be indexed with `1.5` of type `float`
